--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ p {
 
 /* back-to-top */
 
+.row {
+    width: 95% !important;
+    margin: 0 auto;
+}
+
 .top {
     /* position: fixed;
     top: 600px;
@@ -207,12 +212,12 @@ p {
 
 .slider-content {
     text-align: left;
-    padding: 50px;
+    /* padding: 50px; */
 }
 
 .slider-content p {
     width: 100%;
-    height: 350px;
+    height: 300px;
     white-space: pre-line;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -238,7 +243,7 @@ p {
 
 #about {
     height: auto;
-    width: 100%;
+    width: 95%;
     text-align: center;
 }
 
@@ -454,6 +459,11 @@ p {
 
 
 /* tabs */
+
+.tabwrap {
+    width: 95%;
+    margin: 0 auto;
+}
 
 .tab {
     overflow: hidden;
